--- a/src/styles.css
+++ b/src/styles.css
@@ -61,6 +61,10 @@
   opacity: 0.7;
 }
 
+.description:first-letter {
+  text-transform: capitalize;
+}
+
 .future-conditions {
   margin-top: 20px;
   font-size: 25px;
